# rfm-customer-segmentation

./: README.md  pyproject.toml  requirements.txt
notebooks/: 01_data_exploration.ipynb  data_cleaning.ipynb  rfm_analysis.ipynb
sql/: rfm_analysis.sql
src/rfm_customer_segmentation/: data_preprocessing.py  feature_engineering.py  rfm_scoring.py  segmentation.py  utils.py  visualization.py
src/rfm_customer_segmentation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
