[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rfm_customer_segmentation"
version = "0.1.0"
description = "Customer segmentation using RFM analysis"
authors = [
    {name = "Abu Hozaifa"}
]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]